TINY-11079: Fix styling of revision card when not displaying author (#9780)
* TINY-11079: Remove extra padding under revision card date

* TINY-11079: Fix layout issue for revision card date and label

* TINY-11079: Remove unused classes

--- a/modules/oxide/src/less/theme/components/revisionhistory/revisionhistory.less
+++ b/modules/oxide/src/less/theme/components/revisionhistory/revisionhistory.less
@@ -110,7 +110,10 @@
         border-radius: @revisionhistory-border-radius;
         color: @revisionhistory-text-color;
         cursor: pointer;
+        display: flex;
+        flex-direction: column;
         font-size: @font-size-sm;
+        gap: @revisionhistory-gap;
         padding: @revisionhistory-gap;
         width: 100%;
 
@@ -140,15 +143,13 @@
         }
       }
 
-      .tox-revisionhistory__card-header {
-        align-items: center;
+      .tox-revisionhistory__card-date {
         display: flex;
         gap: @revisionhistory-gap;
-        margin-bottom: @revisionhistory-gap;
+        justify-content: space-between;
       }
 
-      .tox-revisionhistory__card-date {
-        flex: 1;
+      .tox-revisionhistory__card-date-label {
         font-size: 16px;
         line-height: @revisionhistory-text-lineheight;
       }
@@ -157,6 +158,7 @@
         font-size: 12px;
         font-weight: 600;
         line-height: @revisionhistory-text-lineheight;
+        padding: 0;
       }
 
       .tox-revisionhistory__card-author {
